# ogni-scan

./: .gitignore  CogniScan_Requirements.txt  Dockerfile  README.md  TEST_README.md  alembic.ini  docker-compose.yml  env.example  package-lock.json  pyproject.toml  requirements.txt  setup.sh  stop.sh  test_supriya_resume.txt
alembic/: env.py
alembic/versions/: 0c48650a9428_add_openai_file_id_column_to_resumes_.py
backend/: main.py
backend/api/: auth.py  resumes.py
backend/config/: settings.py
backend/schemas/: auth.py  chat.py  resume.py
backend/services/: auth_service.py  minio_service.py  openai_service.py  resume_parser.py  simple_resume_parser.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  FileUpload.tsx
